minor fix project section header: left-align in mobile

--- a/src/scss/wc/projects/header-section-wc.scss
+++ b/src/scss/wc/projects/header-section-wc.scss
@@ -13,6 +13,7 @@
 
 	@include media("<=phone") {
 		text-align: left;
+		margin: 0;
 	}
 
 	.header__subtitle{
